--- a/hefty_chest/pubspec.yaml
+++ b/hefty_chest/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
     sdk: flutter
 
   # UI Framework
-  shadcn_flutter: ^0.0.47
+  forui: ^0.16.0
+  forui_hooks: ^0.16.0
 
   # Routing
   go_router: ^17.0.0
