fixed a bunch of shit

--- a/HeftyBack/docker-compose.yml
+++ b/HeftyBack/docker-compose.yml
@@ -19,12 +19,9 @@ services:
       POSTGRES_PASSWORD: password
     restart: unless-stopped
     volumes:
-      - type: tmpfs
-        target: /var/lib/postgresql/data/
+      - pgdata:/var/lib/postgresql/data
     command:
       - "postgres"
-      - "-c"
-      - "fsync=off"
       - "-c"
       - "log_statement=all"
     ports:
@@ -34,3 +31,6 @@ services:
       interval: 2s
       timeout: 5s
       retries: 5
+
+volumes:
+  pgdata:
