--- a/hefty_chest/pubspec.yaml
+++ b/hefty_chest/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   protobuf: ^4.2.0
   fixnum: ^1.1.0
   shared_preferences: ^2.3.3
+  freezed_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -45,10 +46,11 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  build_runner: ^2.4.13
+  build_runner: ^2.10.4
   riverpod_generator: ^3.0.3
   go_router_builder: ^4.1.3
   mockito: ^5.4.4
+  freezed: ^3.2.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
