--- a/hefty_chest/pubspec.yaml
+++ b/hefty_chest/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fixnum: ^1.1.0
   shared_preferences: ^2.3.3
   freezed_annotation: ^3.1.0
+  logging: ^1.3.0
 
 dev_dependencies:
   flutter_test:
